--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -1,7 +1,7 @@
 <div style="height:100px"></div>
 <h1>EVENTS</h1>
 
-<% @event_array.each do |e| %>
+<% @event_array.reverse.each do |e| %>
 
   <div class="card" style="width: 18rem;">
     <div class="card-body">
@@ -13,6 +13,10 @@
       <h5 class="card-text"><b>start_date:</b> <%= e.location %></h5>
       <h5 class="card-text"><b>admin:</b> <%= User.find_by(id:e.admin_event_id).first_name %>-<%= User.find_by(id:e.admin_event_id).last_name %></h5>
 
+      <a style="color: #ff00ff" href="../event/<%= e.id %>" class="card-link">More about the event</a><br>
+      <a style="color: #ff00ff" href="../users/<%=User.find_by(id:e.admin_event_id).id%>" class="card-link">More about the admin</a><br>
+
+      <%= link_to "En savoir plus sur l'admin", user_path(id:e.admin_event_id), method: :show %>
     </div>
   </div>
 <%end%>
