--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -8,4 +8,4 @@
 <b>start_date: </b><%= @event.start_date %></p>
 <b>duration: </b><%= @event.duration %></p>
 <b>price: </b><%= @event.price %> €</p>
-<b>number of participant </b><%= @event.participant_id.count %> €</p>
+<b>number of participant </b><%= @event.participant_id %> </p>
