fix formulaire event, add controller attendances with  page index create edit new update, modif controller event, modif views event, modif routes

--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -1,7 +1,7 @@
 <div style="height:100px"></div>
 <h1>EVENTS</h1>
 
-<% @event_array.reverse.each do |e| %>
+<% @event.reverse.each do |e| %>
 
   <div class="card" style="width: 18rem;">
     <div class="card-body">
