afficher les boutons

--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -12,7 +12,7 @@
 <%= button_to "Join", { :action => "new" }, :method => :post %>
       <%= link_to "Joint this event", attendances_path, :method => :post %>
 
-  <% if current_user.to_i== @event.admin_event_id %>
+  <% if current_user.id.to_i == @event.admin_event_id %>
     <%= link_to "mon espace événement", attendances_path(:event_id => @event.id, :admin_event_id => @event.admin_event_id), :method => :get %>
   <% else %>
   <% end %>
