--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -1,18 +1,40 @@
 <div style="height:100px"></div>
-
+<div class="container-fluid">
+<li class="list-group-item">
 <h1><p><%= @event.title %><h1>
 <p><h3>Event by <%= @admin.find_by(id:@event.admin_event_id).first_name %> <%=@admin.find_by(id:@event.admin_event_id).last_name %></h3><br>
 <b>Description: </b><%= @event.description %></p>
-<b>location: </b><%= @event.location %></p>
+</li>
+<ul class="list-group">
+<li class="list-group-item"><b>location: </b><%= @event.location %></li>
 
-<b>start_date: </b><%= @event.start_date %></p>
-<b>duration: </b><%= @event.duration %></p>
-<b>price: </b><%= @event.price %> €</p>
+<li class="list-group-item"><b>start_date: </b><%= @event.start_date %></li>
+<li class="list-group-item"><b>duration: </b><%= @event.duration %></li>
+<li class="list-group-item"><b>price: </b><%= @event.price %> €</li>
 
 
-      <%= link_to "Joint this event", new_attendance_path(:event_id => @event.id), :method => :get %><br>
+<% if user_signed_in? %>
+  <% if current_user.id.to_i != @event.admin_event_id %>
+                    <div class="btn-group">
+                      <a class="btn btn-outline-primary btn-sm" href="<%=  new_attendance_path(:event_id => @event.id)%>" role="button">Joint this event &raquo;</a>
+                    </div>
+  <%elsif  session[:user_id].nil? %>
+                      <div class="btn-group">
+                      <a class="btn btn-outline-primary btn-sm" href="<%=  new_user_session_path%>" role="button">Joint this event &raquo;</a>
+                    </div>
+  <%end%>
+<% else session[:user_id].nil? %>
+                      <div class="btn-group">
+                      <a class="btn btn-outline-primary btn-sm" href="<%=  new_user_session_path%>" role="button">Joint this event &raquo;</a>
+                    </div>
+<%end%>
 
-  <% if current_user.id.to_i == @event.admin_event_id %>
+  <% if user_signed_in? %>
+    <% if current_user.id.to_i== @event.admin_event_id %>
+
     <%= link_to "mon espace événement", attendances_path(:event_id => @event.id, :admin_event_id => @event.admin_event_id), :method => :get %>
+    <%else%>
+    <%end%>
   <% else %>
   <% end %>
+</div>
